--- a/servlet04/pom.xml
+++ b/servlet04/pom.xml
@@ -30,6 +30,38 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>javax.servlet</groupId>-->
+<!--      <artifactId>javax.servlet-api</artifactId>-->
+<!--      <version>4.0.1</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>javax.servlet.jsp</groupId>-->
+<!--      <artifactId>jsp-api</artifactId>-->
+<!--      <version>2.2</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>javax.servlet.jsp.jstl</groupId>-->
+<!--      <artifactId>jstl-api</artifactId>-->
+<!--      <version>1.2</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.apache.taglibs</groupId>-->
+<!--      <artifactId>taglibs-standard-impl</artifactId>-->
+<!--      <version>1.2.5</version>-->
+<!--    </dependency>-->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.8.0</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.3</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
